feat: add unit test for domain and service layer of User aggregate root