@@ -32,7 +32,7 @@ public enum Role {
         var authorities = getPermissions()
                 .stream()
                 .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
